[package]
name = "fuzzel-secrets"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fuzzel-secrets"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
oo7 = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
